// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.sorter > renders custom sort icon correctly 1`] = `
<span
  class="customize-icon"
>
  sortAscend
</span>
`;

exports[`Table.sorter > renders custom sort icon correctly 2`] = `
<span
  class="customize-icon"
>
  sortDescend
</span>
`;

exports[`Table.sorter > renders custom sort icon correctly 3`] = `
<span
  class="customize-icon"
>
  unsorted
</span>
`;
